js - five day forecast function

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
   }
   
   .five-day-card {
-    background: linear-gradient(to right, #00ccff 0%, #6600cc 100%);
+    background:rgb(39, 13, 153);
     color: white;
   }
   
